--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="The Donut House in Red Oak and Maypearl" />
     <meta name="keyword" content="the donut house red oak maypearl" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/components/icon.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
     <script src='https://www.google.com/recaptcha/api.js'></script>
@@ -38,6 +39,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
+    <!-- Main image -->
     <div class='hero-image-1' id='home-section'>
       <img class='company-logo' src='images/company-logo.png' />
       <p class='phone-number'>972-576-5200</p>
@@ -47,6 +49,7 @@
       </div> -->
     </div>
 
+    <!-- OUR STORY -->
     <div class='content1' id='story-section'>
       <!-- <div class='container'> -->
 
@@ -59,6 +62,7 @@
       <!-- </div> -->
     </div>
 
+    <!-- LIKE US ON FACEBOOK -->
     <div class='hero-image-2'>
       <a href='https://www.facebook.com/The-DONUT-HOUSE-Ellis-County-Texas-188983254472569/'>
         <div class='title-box'>
@@ -67,6 +71,7 @@
       </a>
     </div>
 
+    <!-- OUR MENU -->
     <div class='content1' id='menu-section'>
       <h2 class='content-title'>Our Menu</h2>
 
@@ -151,6 +156,7 @@
     <div class='hero-image-3'>
     </div>
 
+    <!-- LOCATIONS -->
     <div class='content2' id='locations-section'>
       <h2 class='content-title'>Locations</h2>
 
@@ -208,12 +214,9 @@
     </div>
 
     <div class='hero-image-4'>
-      <!-- <div class='title-box'>
-        <h1>Welcome To The Donut House</h1>
-        <p>est. 2003</p>
-      </div> -->
     </div>
 
+    <!-- ORDER FORM -->
     <div class='content1' id='order-section'>
       <h2 class='content-title'>Order Online</h2>
       <form action='mail.php' method='POST'>
@@ -232,6 +235,7 @@
       </form>
     </div>
 
+    <!-- GALLERY -->
     <div class='gallery content3 hide'>
       <div class='row'>
         <div class='col-md-4 col-sm-6 col-xs-12'>
@@ -270,8 +274,23 @@
       </div>
     </div>
 
+    <!-- FOOTER -->
     <div class="footer">
-      <p>&copy; The Donut House 2017<br />205 S. Main Street, St. 1011 <br />Red Oak, TX 75154<br />ph: (972) 576-5200</p>
+      <section>
+
+        <p>&copy; The Donut House 2017</p>
+        <hr />
+        <p>205 S. Main Street, St. 1011 <br />Red Oak, TX 75154<br />ph: (972) 576-5200</p>
+        <hr />
+        <p>Sun-Fri: 5:00AM-11:00AM<br />Sat: 5:00AM-11:30AM</p>
+        <hr />
+        <a href="https://www.facebook.com/The-DONUT-HOUSE-Ellis-County-Texas-188983254472569/"><p><i class="facebook square icon"></i>Follow us on facebook!</p></a>
+
+      </section>
+
+      <section>
+        <iframe class="google-map" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=205%20S.%20Main%20Street%2C%20St.%201011%20Red%20Oak%2C%20TX&key=AIzaSyCe6w82VSa2poKLbGKXwobsn1WBytwYnCQ" allowfullscreen></iframe>
+      </section>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
@@ -293,3 +312,6 @@
 
   </body>
 </html>
+
+<!-- Google Maps API Key -->
+<!-- AIzaSyCe6w82VSa2poKLbGKXwobsn1WBytwYnCQ -->
