add dropdown menu items

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="The Donut House in Red Oak and Maypearl" />
     <meta name="keyword" content="the donut house red oak maypearl" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/components/icon.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
     <script src='https://www.google.com/recaptcha/api.js'></script>
@@ -75,8 +75,9 @@
     <div class='content1' id='menu-section'>
       <h2 class='content-title'>Our Menu</h2>
 
-      <h3 class='menu-sub-title'>Donuts (each / dzn)</h3>
-      <ul>
+      <div class='menu-sub-title'><h3><i class="fa fa-caret-right" aria-hidden="true"></i>
+Donuts (each / dzn)</h3></div>
+      <ul class="hide">
         <li>Glazed<span class='pull-right'>$.75 / $7.95</span></li><hr class='item-divider' />
         <li>Chocolate<span class='pull-right'>$.80 / $8.50</span></li><hr class='item-divider' />
         <li>Mixed Dzn (6 Glz &amp; 6 Choc)<span class='pull-right'>$8.75</span></li><hr class='item-divider' />
@@ -86,15 +87,17 @@
         <li>Variety Dzn (excludes large items)<span class='pull-right'>$9.50</span></li><hr class='item-divider' />
       </ul>
 
-      <h3 class='menu-sub-title'>Donut Holes (dzn / half-dzn)</h3>
-      <ul>
+      <div class='menu-sub-title'><h3><i class="fa fa-caret-right" aria-hidden="true"></i>
+Donut Holes (dzn / half-dzn)</h3></div>
+      <ul class="hide">
         <li>Glazed<span class='pull-right'>$1.50 / $.85</span></li><hr class='item-divider' />
         <li>Choc./Variety<span class='pull-right'>$1.85 / $1</span></li><hr class='item-divider' />
         <li>Sprinkles<span class='pull-right'>$2.25 / $1.25</span></li><hr class='item-divider' />
       </ul>
 
-      <h3 class='menu-sub-title'>Specialty Donuts</h3>
-      <ul>
+      <div class='menu-sub-title'><h3><i class="fa fa-caret-right" aria-hidden="true"></i>
+Specialty Donuts</h3></div>
+      <ul class="hide">
         <li>Eclair/Jelly Bar<span class='pull-right'>$1.50</span></li><hr class='item-divider' />
         <li>Fried Pies<span class='pull-right'>$1.50</span></li><hr class='item-divider' />
         <li>Glazed Puff<span class='pull-right'>$1.00</span></li><hr class='item-divider' />
@@ -107,8 +110,9 @@
         <li>Small Hand-Decorated<span class='pull-right'>$1.75</span></li><hr class='item-divider' />
       </ul>
 
-      <h3 class='menu-sub-title'>Hogs (each / half-dzn / dzn)</h3>
-      <ul>
+      <div class='menu-sub-title'><h3><i class="fa fa-caret-right" aria-hidden="true"></i>
+Hogs (each / half-dzn / dzn)</h3></div>
+      <ul class="hide">
         <li>Pig in a Blanket<span class='pull-right'>$.95 / $5.50 / $9.95</span></li><hr class='item-divider' />
         <li>Cheddar Hog<span class='pull-right'>$2.25 / $11.95 / $22.50</span></li><hr class='item-divider' />
         <li>Jalepeno Hog<span class='pull-right'>$2.50 / $12.95 / $25</span></li><hr class='item-divider' />
@@ -118,35 +122,40 @@
         <li>Capt. Jack<span class='pull-right'>$2.75 / $13.95 / $26.95</span></li><hr class='item-divider' />
       </ul>
 
-      <h3 class='menu-sub-title'>Other Meat Items<br /><span class='meat-choices'>(choice of meat: sausage, bacon, or ham)<br />(burritos: sausage, bacon, or potato)</span></h3>
-      <ul>
+      <div class='menu-sub-title'><h3><i class="fa fa-caret-right" aria-hidden="true"></i>
+Other Meat Items<br /><span class='meat-choices hide'>(choice of meat: sausage, bacon, or ham)<br />(burritos: sausage, bacon, or potato)</span></h3></div>
+      <ul class="hide">
         <li>Croissant w/ meat &amp; cheese<span class='pull-right'>$2.95 / 2 for $5.50</span></li><hr class='item-divider' />
         <li>Biscuit (any kind)<span class='pull-right'>$1.95 / 2 for $3.50 / 3 for $3.75</span></li><hr class='item-divider' />
         <li>Breakfast Burrito<span class='pull-right'>$1.85 / 2 for $3.50</span></li><hr class='item-divider' />
       </ul>
 
-      <h3 class='menu-sub-title'>Drinks</h3>
-      <ul>
+      <div class='menu-sub-title'><h3><i class="fa fa-caret-right" aria-hidden="true"></i>
+Drinks</h3></div>
+      <ul class="hide">
         <li>Coffee and Cappuccinos (S/M/L)<span class='pull-right'>$1.50 / $1.75 / $1.95</span></li><hr class='item-divider' />
         <li>Variety of cold drinks including energy drinks and fraps also available</li><hr class='item-divider' />
       </ul>
 
-      <h3 class='menu-sub-title'>Meal Deals<br /><span class='meat-choices'>(includes a large drink)</span></h3>
-      <ul>
+      <div class='menu-sub-title'><h3><i class="fa fa-caret-right" aria-hidden="true"></i>
+Meal Deals<br /><span class='meat-choices hide'>(includes a large drink)</span></h3></div>
+      <ul class="hide">
         <li>#1 - 4 Pigs, 2 Donut<span class='pull-right'>$5.95</span></li><hr class='item-divider' />
         <li>#2 - 2 Hogs, Dzn Holes<span class='pull-right'>$6.95</span></li><hr class='item-divider' />
         <li>#3 - Croissant, Dzn Holes<span class='pull-right'>$5.95</span></li><hr class='item-divider' />
         <li>#4 - 2 Burritos, 2 Donuts<span class='pull-right'>$5.95</span></li><hr class='item-divider' />
       </ul>
 
-      <h3 class='menu-sub-title'>Kid's Meal<br /><span class='meat-choices'>(includes a juice box or small milk)</span></h3>
-      <ul>
+      <div class='menu-sub-title'><h3><i class="fa fa-caret-right" aria-hidden="true"></i>
+Kid's Meal<br /><span class='meat-choices hide'>(includes a juice box or small milk)</span></h3></div>
+      <ul class="hide">
         <li>#1 - 1 Pig, 1/2 Dzn Holes<span class='pull-right'>$2.55 / 2 for $5.00</span></li><hr class='item-divider' />
         <li>#2 - 2 Pigs, Dzn Holes<span class='pull-right'>$3.85 / 2 for $7.50</span></li><hr class='item-divider' />
       </ul>
 
-      <h3 class='menu-sub-title'>Family Packs<br /><span class='meat-choices'>(includes 2 large and 2 small drinks)</span></h3>
-      <ul>
+      <div class='menu-sub-title'><h3><i class="fa fa-caret-right" aria-hidden="true"></i>
+Family Packs<br /><span class='meat-choices hide'>(includes 2 large and 2 small drinks)</span></h3></div>
+      <ul class="hide">
         <li>#1 - Variety Dzn w/ Dzn Pigs or 4 Hogs<span class='pull-right'>$19.95</span></li><hr class='item-divider' />
         <li>#2 - Mixed Dzn w/ 10 Burritos or 6 Hogs<span class='pull-right'>$29.95</span></li><hr class='item-divider' />
       </ul>
