--- a/index.html
+++ b/index.html
@@ -294,6 +294,8 @@ Family Packs<br /><span class='meat-choices hide'>(includes 2 large and 2 small 
         <p>Sun-Fri: 5:00AM-11:00AM<br />Sat: 5:00AM-11:30AM</p>
         <hr />
         <a href="https://www.facebook.com/The-DONUT-HOUSE-Ellis-County-Texas-188983254472569/"><p><i class="facebook square icon"></i>Follow us on facebook!</p></a>
+        <hr />
+        <p>Interested in joining the team? Apply <a class="footer-link" href="https://docs.google.com/forms/d/e/1FAIpQLSf_LBWJtT0GGRW3suz00AnOV8yTD2jmGp_KK5p4U5_rVWXoHw/viewform">here</a> or download and fill out the <a class="footer-link" href="application.pdf">PDF</a> and swing by!</p>
 
       </section>
 
